--- a/index.html
+++ b/index.html
@@ -1008,13 +1008,14 @@
     <!-- Navigation -->
     <header>
         <nav>
-            <a href="#" class="logo">THE TRENDSETTERS</a>
+            <a href="index.html" class="logo">THE TRENDSETTERS</a>
             <ul class="nav-menu">
-                <li><a href="#services">Services</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#contact" class="cta-nav"><span>Start Your Event</span></a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="cta-nav"><span>Start Your Event</span></a></li>
             </ul>
         </nav>
     </header>
