Fix missing ul nav-menu tags in navigation - resolves mobile menu overlap issue

--- a/contact.html
+++ b/contact.html
@@ -1069,6 +1069,8 @@
                 <span></span>
                 <span></span>
             </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
             
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
