--- a/portfolio.html
+++ b/portfolio.html
@@ -1049,6 +1049,8 @@
                 <span></span>
                 <span></span>
             </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
             
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
