--- a/services.html
+++ b/services.html
@@ -902,6 +902,8 @@
                 <span></span>
                 <span></span>
             </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
             
                 <li><a href="services.html" class="active">Services</a></li>
                 <li><a href="about.html">About</a></li>
