Fix navigation HTML formatting - remove extra indentation and blank lines
Fixed improper indentation in menu-toggle div and removed blank lines after Home link in services.html, portfolio.html, and contact.html to match the working navigation structure in index.html

--- a/services.html
+++ b/services.html
@@ -897,14 +897,13 @@
                 <a href="index.html" class="logo">THE TRENDSETTERS</a>
                 <span class="logo-tagline">Event Management since 2003</span>
             </div>
-                        <div class="menu-toggle">
+            <div class="menu-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-            
+                <li><a href="index.html">Home</a></li>
                 <li><a href="services.html" class="active">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
