--- a/contact.html
+++ b/contact.html
@@ -1064,14 +1064,13 @@
                 <a href="index.html" class="logo">THE TRENDSETTERS</a>
                 <span class="logo-tagline">Event Management since 2003</span>
             </div>
-                        <div class="menu-toggle">
+            <div class="menu-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-            
+                <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
