Add founder's event management experience since 2003
- Updated founder bio to include 'In event management since 2003'
- Added new achievement highlighting '20+ years in event management (since 2003)'
- Emphasizes the founder's extensive experience in the industry

--- a/about.html
+++ b/about.html
@@ -1052,11 +1052,16 @@
                     <p class="leader-bio">
                         With an illustrious career spanning 30 years with the prestigious Ashok Group Hotels, 
                         Mr. Girish Purdhani brings unparalleled expertise in hospitality and event management. 
-                        His vision and dedication have shaped The Trendsetters into the industry leader it is today.
+                        In event management since 2003, his vision and dedication have shaped The Trendsetters 
+                        into the industry leader it is today.
                     </p>
                     <div class="leader-achievement">
                         <div class="achievement-icon">🏆</div>
                         <span>30+ years in luxury hospitality</span>
+                    </div>
+                    <div class="leader-achievement">
+                        <div class="achievement-icon">🎯</div>
+                        <span>20+ years in event management (since 2003)</span>
                     </div>
                     <div class="leader-achievement">
                         <div class="achievement-icon">✈️</div>
