Add founder's photo back to About page
- Restored the two-column layout for the leadership section
- Added leader-image div with img tag pointing to images/founder.jpg
- Created images directory for storing website images
- Added README for image setup instructions

Note: The actual founder.jpg image needs to be saved to the images folder

--- a/about.html
+++ b/about.html
@@ -1045,8 +1045,11 @@
     <section class="leadership">
         <div class="leadership-container">
             <h2>Our Leadership</h2>
-            <div class="leader-profile" style="grid-template-columns: 1fr;">
-                <div class="leader-info" style="max-width: 100%;">
+            <div class="leader-profile">
+                <div class="leader-image">
+                    <img src="images/founder.jpg" alt="Girish Purdhani - Founder & CEO">
+                </div>
+                <div class="leader-info">
                     <h3 class="leader-name">Girish Purdhani</h3>
                     <p class="leader-title">Chief Executive & Founder</p>
                     <p class="leader-bio">
